include vehicles outside the zonal system into rebalancing